# AreaCalc

./: README.md  __init__.py  pyproject.toml
area_calc/: __init__.py  interface.py  shatpes.py
interface/: __init__.py  shape.py  shape_2d.py
shape_master/: __init__.py  shatpes.py
shape_master/interface/: __init__.py  shape.py  shape_2d.py  shape_3d.py  shape_4d.py
shape_master/shapes/: __init__.py  circle.py  cube.py  tesseract.py  triangle.py
tests/: test_circle.py  test_cube.py  test_tesseract.py  test_triangle.py
